test_regress/t/t_let_recurse_bad.out
%Error: t/t_let_recurse_bad.v:9:36: Recursive let substitution 'RECURSE'
    9 |    let RECURSE(a) = (a == 1) ? 1 : RECURSE(a - 1);   
      |                                    ^~~~~~~
%Error: Exiting due to
